[gd_scene load_steps=3 format=3 uid="uid://4vfw8g5c0mgb"]

[ext_resource type="Script" path="res://Scripts/Components/auto_save_component.gd" id="1_adphh"]
[ext_resource type="LabelSettings" uid="uid://dn3nilvhdaih5" path="res://Assets/font_game_menu.tres" id="2_dt1rx"]

[node name="AutoSaveComponent" type="Node"]
script = ExtResource("1_adphh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Info" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -388.0
offset_top = 64.0
offset_right = -63.0
offset_bottom = 129.0
grow_horizontal = 0
scale = Vector2(0.8, 0.8)
text = "Auto   Saving. . ."
label_settings = ExtResource("2_dt1rx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AutoSaveTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="InfoTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="AutoSaveTimer" to="." method="_on_auto_save_timer_timeout"]
[connection signal="timeout" from="InfoTimer" to="." method="_on_info_timer_timeout"]
